Adding minimal changes to the structure and design

--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@
         </nav>
     </header>
     <main class="container-fluid">
-        <section class="tituloIndex d-flex flex-row justify-content-center mt-5 ms-5 me-5 p-5">
-            <div class="columnMain1 col-12 col-md-4 me-5">
+        <section class="tituloIndex d-flex flex-row justify-content-around mt-5">
+            <div class="columnMain1 d-flex flex-column justify-content-around col-12 col-md-4 ms-5">
                 <h1>Tu cerebro es para crear, no para recordar 974 tareas</h1>
-                <h2>Captura todas esas tareas en To-do List y disfruta la sensación de claridad y control.</h2>
+                <h2 class="fs-3 text-justify">Captura todas esas tareas en To-do List, y disfruta la sensación de claridad y control.</h2>
+                <a class="registerMainSection" href="">Pruébala gratis</a>
             </div>
-            <div class="columnMain2 col-12 col-md-4 ms-5">
+            <div class="columnMain2 col-12 col-md-4 me-5">
                 <img class="imgMainSection" src="./assets/img/ilustracion-lista-comprobacion-marca-comprobacion_108061-1694.jpg" alt="Lista de tareas">
             </div>
         </section>
