Adding minimal changes to the structure and design

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <div class="collapse navbar-collapse d-flex flex-row-reverse pe-5" id="navbarNavDropdown">
                     <ul class="navbar-nav pe-5">
                         <li class="nav-item dropdown pe-3">
-                            <a class="nav-link dropdown-toggle navBarButton" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                            <a class="nav-link dropdown-toggle navBarButton" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
                                 Usos
                             </a>
                             <ul class="dropdown-menu">
@@ -29,8 +29,8 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown pe-3">
-                            <a class="nav-link dropdown-toggle navBarButton" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                            <a class="nav-link dropdown-toggle navBarButton" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
                                 Recursos
                             </a>
                             <ul class="dropdown-menu">
@@ -56,13 +56,44 @@
     </header>
     <main class="container-fluid">
         <section class="tituloIndex d-flex flex-row justify-content-around mt-5">
-            <div class="columnMain1 d-flex flex-column justify-content-around col-12 col-md-4 ms-5">
+            <div class="columnMain1 d-flex flex-column justify-content-around col-12 col-md-4 ms-5 mt-5">
                 <h1>Tu cerebro es para crear, no para recordar 974 tareas</h1>
-                <h2 class="fs-3 text-justify">Captura todas esas tareas en To-do List, y disfruta la sensación de claridad y control.</h2>
+                <h2 class="fs-3 text-justify">Captura todas esas tareas en To-do List, y disfruta la sensación de
+                    claridad y control.</h2>
                 <a class="registerMainSection" href="">Pruébala gratis</a>
             </div>
             <div class="columnMain2 col-12 col-md-4 me-5">
-                <img class="imgMainSection" src="./assets/img/ilustracion-lista-comprobacion-marca-comprobacion_108061-1694.jpg" alt="Lista de tareas">
+                <img class="imgMainSection"
+                    src="./assets/img/ilustracion-lista-comprobacion-marca-comprobacion_108061-1694.jpg"
+                    alt="Lista de tareas">
+            </div>
+        </section>
+        <section class="container-fluid miniSection">
+            <div class="elementosSegundaSeccion pt-5 d-flex flex-row justify-content-center align-items-center">
+                <div class="w-100 d-flex justify-content-center pt-5 pb-5">
+                    <div class="w-75 text-center">
+                        <div>
+                            <p class="text-justify fs-4 fw-bolder">“Simple, directa y superpoderosa”</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- <hr> -->
+                <div class="w-100 d-flex justify-content-center pt-5 pb-5">
+                    <div class="w-75 text-center">
+                        <div>
+                            <p class="text-justify fs-4 fw-bolder">“La mejor aplicación de listas de tareas pendientes
+                                del mercado”</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- <hr> -->
+                <div class="w-100 d-flex justify-content-center pt-5 pb-5">
+                    <div class="w-75 text-center">
+                        <div>
+                            <p class="text-justify fs-4 fw-bolder">“Nada menos que estelar”</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
