Updating structur and style

--- a/index.html
+++ b/index.html
@@ -69,31 +69,56 @@
             </div>
         </section>
         <section class="container-fluid miniSection">
-            <div class="elementosSegundaSeccion pt-5 d-flex flex-row justify-content-center align-items-center">
-                <div class="w-100 d-flex justify-content-center pt-5 pb-5">
-                    <div class="w-75 text-center">
-                        <div>
-                            <p class="text-justify fs-4 fw-bolder">“Simple, directa y superpoderosa”</p>
-                        </div>
+            <div class="elementosSegundaSeccion h-100 pt-5 d-flex flex-row justify-content-evenly align-items-center">
+                <div class="ps-5 ms-5">
+                    <div class="w-100 d-flex flex-column justify-content-center ps-5 ms-5">
+                        <p class="parrafosMiniSection">“Simple, directa</p>
+                        <p class="parrafosMiniSection"> y superpoderosa”</p>
                     </div>
                 </div>
-                <!-- <hr> -->
-                <div class="w-100 d-flex justify-content-center pt-5 pb-5">
-                    <div class="w-75 text-center">
-                        <div>
-                            <p class="text-justify fs-4 fw-bolder">“La mejor aplicación de listas de tareas pendientes
-                                del mercado”</p>
-                        </div>
+                <hr class="hrParrafos">
+                <div>
+                    <div class="d-flex flex-column justify-content-center">
+                        <p class="parrafosMiniSection">“La mejor aplicación</p>
+                        <p class="parrafosMiniSection">de listas de tareas</p>
+                        <p class="parrafosMiniSection">pendientes del mercado”</p>
                     </div>
                 </div>
-                <!-- <hr> -->
-                <div class="w-100 d-flex justify-content-center pt-5 pb-5">
-                    <div class="w-75 text-center">
-                        <div>
-                            <p class="text-justify fs-4 fw-bolder">“Nada menos que estelar”</p>
-                        </div>
+                <hr class="hrParrafos">
+                <div class="pe-5 me-5">
+                    <div class="w-100 d-flex flex-row justify-content-center pe-5 me-5">
+                        <p class="parrafosMiniSection">“Nada menos que estelar”</p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="seccionMedio container-fluid">
+            <div class="textosYVideo d-flex flex-row justify-content-center">
+                <div class="textos d-flex flex-column">
+                    <div class="textos1">
+                        <p class="parrafoCorto1">Despeja tu mente</p>
+                        <h3>Captura tareas a la</h3>
+                        <h3>velocidad del pensamiento</h3>
+                        <p class="parrafoLargo1">Hemos pasado más de una década perfeccionando To-do List para que sea una extensión de tu cerebro. Captura y organiza tareas al instante usando lenguaje coloquial y fluido.</p>
+                    </div>
+                    <div class="textos2">
+                        <p class="parrafoCorto2">Concéntrate en lo importante</p>
+                        <h3>Aumenta tu concentración</h3>
+                        <h3>y organización</h3>
+                        <p class="parrafoLargo2">Consigue claridad mental ordenando tus tareas en las vistas Hoy o Próximo, o bien, utilizando filtros personalizados. Ve solo lo que necesitas, cuando lo necesitas.</p>
+                    </div>
+                    <div class="textos3">
+                        <p class="parrafoCorto3">Planifica con confianza</p>
+                        <h3>Simplifica la planificación</h3>
+                        <p class="parrafoLargo3">Aprovecha tu tiempo al máximo. Establece fechas de vencimiento, visualiza tu semana con la vista de calendario y programa tareas periódicas muy fácilmente.</p>
+                    </div>
+                    <div class="textos4">
+                        <p class="parrafoCorto4">Organiza también el trabajo de tu equipo</p>
+                        <h3>Un hogar para las tareas de tu equipo</h3>
+                        <p class="parrafoLargo4">Dale a tu equipo un espacio compartido para colaborar y mantenerse informado, junto a sus tareas y proyectos personales, pero separado de ellos.</p>
+                    </div>
+                </div>
+                <div class="video"></div>
             </div>
         </section>
     </main>
