Removing previous logic and implementing new one. Basic logic to add tasks

--- a/pages/to-do_list.html
+++ b/pages/to-do_list.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <script src="../js/scripts.js"></script>
+    <script defer src="../js/scripts.js"></script>
     <title>To-do List</title>
 </head>
 
@@ -64,7 +64,7 @@
             <div class="cuadroAgregarTarea">
                 <div>
                     <input class="cuadroACompletar" type="text" id="nuevaTarea" placeholder="Ingrese una nueva tarea">
-                    <button class="botonAgregarTarea" onclick="agregarTarea()"> Agregar tarea </button>
+                    <button class="botonAgregarTarea">Agregar tarea</button>
                 </div>
             </div>
             <div class="titulosPreLista">
@@ -75,7 +75,7 @@
                 <ul id="listaTareas">
         
                 </ul>
-                <div class="cuadroProgreso">asd</div>
+                <div class="cuadroProgreso"></div>
             </div>
         </div>
     </main>
